--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/aos": "^3.0.3",
     "@types/bootstrap": "^5.0.3",
     "@types/jest": "^26.0.15",
+    "@types/leaflet": "^1.5.21",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -18,10 +19,13 @@
     "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-leaflet": "^3.0.5",
+    "react-maskedinput": "^4.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.27.14",
