--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/styled-components": "^5.1.7",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
+    "formik": "^2.2.6",
     "jquery": "^3.5.1",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
@@ -25,14 +26,16 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-leaflet": "^3.0.5",
-    "react-maskedinput": "^4.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.27.14",
+    "remask": "^0.1.0-alpha.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "vanilla-masker": "^1.2.0",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
